Minor changes to UI components

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root minHeight="518.0" minWidth="792.0" onCloseRequest="#handleExit" title="DukeAcademy" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="700.0" minWidth="1050.0" onCloseRequest="#handleExit" title="DukeAcademy" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <icons>
         <Image url="@/images/dukeacademy-icon.png" />
     </icons>
@@ -30,12 +30,12 @@
 
                 <!-- Command box and command results display -->
                 <HBox spacing="15.0" VBox.vgrow="NEVER">
-                    <StackPane fx:id="commandBoxPlaceholder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="258.0" style="-fx-border-color: #000000;" HBox.hgrow="NEVER">
+                    <StackPane fx:id="commandBoxPlaceholder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="258.0" HBox.hgrow="NEVER">
                         <HBox.margin>
                             <Insets bottom="15.0" left="15.0" top="15.0" />
                         </HBox.margin>
                     </StackPane>
-                    <StackPane fx:id="resultDisplayPlaceholder" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.6" prefWidth="550.0" style="-fx-border-color: #000000;" HBox.hgrow="ALWAYS">
+                    <StackPane fx:id="resultDisplayPlaceholder" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.6" prefWidth="550.0" HBox.hgrow="ALWAYS">
                         <HBox.margin>
                             <Insets bottom="15.0" right="15.0" top="15.0" />
                         </HBox.margin>
