added tab tracking

--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -9,4 +9,6 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10" />
   </columnConstraints>
   <Label fx:id="saveLocationStatus" />
+  <Label fx:id="tab"
+         GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 </GridPane>
