--- a/src/main/resources/view/UserGuideHelpCard.fxml
+++ b/src/main/resources/view/UserGuideHelpCard.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 
 <HBox id="cardPane" fx:id="cardPane" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-	<Label prefHeight="22.0" styleClass="cell_small_label" text="Click to copy link to User Guide: " />
+	<Label prefHeight="22.0" styleClass="cell_small_label" text="If you like to learn more, click to copy link to User Guide: " />
    <Hyperlink fx:id="hyperlink" text="\$hyperlink" />
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
