--- a/src/main/resources/view/Windows/CardCreatingWindow.fxml
+++ b/src/main/resources/view/Windows/CardCreatingWindow.fxml
@@ -23,7 +23,7 @@
         <Label text="Enter your question" />
       <TextArea fx:id="questionField" prefHeight="50.0" />
         <Label fx:id="addAnswerLabel" text="Enter your answers" />
-        <VBox fx:id="answerContainer" />
+        <VBox fx:id="answerContainer" maxHeight="50.0" />
         <Button fx:id="onAddQuestion" mnemonicParsing="false" text="Add card" />
     </children>
 </fx:root>
