--- a/src/main/resources/view/RecordListPanel.fxml
+++ b/src/main/resources/view/RecordListPanel.fxml
@@ -19,9 +19,39 @@
             </Label>
             <HBox alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <children>
-                  <ListView fx:id="sideView" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefWidth="150.0" HBox.hgrow="ALWAYS" />
-                  <VBox fx:id="recordTypeView" prefWidth="400.0" HBox.hgrow="ALWAYS" />
-                  <FlowPane fx:id="flowPaneView" HBox.hgrow="ALWAYS" />
+                  <VBox fx:id="healthTypePage" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <VBox fx:id="recordTypeView" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" VBox.vgrow="ALWAYS" />
+                     </children>
+                     <HBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <ScrollPane fx:id="overviewPage" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" pannable="true" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <content>
+                        <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" style="-fx-background-color: snow;">
+                           <children>
+                              <FlowPane fx:id="flowPaneView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                                 <VBox.margin>
+                                    <Insets bottom="70.0" />
+                                 </VBox.margin>
+                              </FlowPane>
+                              <VBox VBox.vgrow="ALWAYS">
+                                 <VBox.margin>
+                                    <Insets left="40.0" right="40.0" />
+                                 </VBox.margin>
+                                 <children>
+                                    <Label fx:id="allRecordsLabel" styleClass="allRecordsLabel" text="All Records" />
+                                    <ListView fx:id="allRecordsView" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
                </children>
             </HBox>
          </children>
