--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -489,6 +489,20 @@
     -fx-text-fill: black;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
+    -fx-background-radius: 3;
+    -fx-font-size: 12;
+}
+
+#remarkPages {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#remarkPages .label {
+    -fx-text-fill: black;
+    -fx-background-color: #fea780;
+    -fx-padding: 2 5 2 5;
+    -fx-border-radius: 2;
     -fx-background-radius: 5;
     -fx-font-size: 12;
 }
@@ -524,7 +538,8 @@
 
 #summaryCardHolder {
     -fx-border-color: black;
-    -fx-border-radius: 5;
+    -fx-border-radius: 4;
+    -fx-background-color: rgba(255, 212, 207, 0.71);
 }
 
 #personCard {
@@ -560,4 +575,20 @@
 #mealPlanViewing {
     -fx-font-size: 36;
     -fx-font-weight: bold;
+}
+
+
+.recordType {
+    -fx-background-color: rgba(255, 212, 207, 0.71);
+    -fx-font-weight: normal;
+    -fx-background-radius: 4;
+    -fx-font-size: 20px;
+    -fx-text-fill: #010504;
+}
+
+.allRecordsLabel {
+    -fx-font-size: 20px;
+    -fx-font-family: Tahoma;
+    -fx-text-fill: #4b4b4b;
+    -fx-padding: 0 0 0 10;
 }
