--- a/src/main/resources/view/RecordListCard.fxml
+++ b/src/main/resources/view/RecordListCard.fxml
@@ -5,35 +5,44 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<GridPane fx:id="summaryCardHolder" prefHeight="200.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
- <columnConstraints>
-   <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
- </columnConstraints>
- <VBox fx:id="summaryCard" alignment="CENTER_LEFT" minHeight="105">
-   <padding>
-     <Insets bottom="5" left="15" right="5" top="5" />
-   </padding>
-   <Label fx:id="type" styleClass="cell_small_label" text="\$type" wrapText="true">
-         <font>
-            <Font size="24.0" />
-         </font>
-         <padding>
-            <Insets bottom="20.0" top="10.0" />
-         </padding>
-      </Label>
-   <Label fx:id="value" styleClass="cell_small_label" text="\$value">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-   <Label fx:id="timestamp" styleClass="cell_small_label" text="\$timestamp" />
-      <FlowPane fx:id="pages" prefHeight="200.0" prefWidth="200.0" />
- </VBox>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
-</GridPane>
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+  <GridPane HBox.hgrow="ALWAYS">
+    <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
+    </columnConstraints>
+    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+      <padding>
+        <Insets bottom="5" left="15" right="5" top="5" />
+      </padding>
+      <HBox alignment="CENTER_LEFT" spacing="5">
+        <Label fx:id="id" styleClass="cell_big_label">
+          <minWidth>
+            <!-- Ensures that the label text is never truncated -->
+            <Region fx:constant="USE_PREF_SIZE" />
+          </minWidth>
+        </Label>
+            <Label fx:id="type" styleClass="recordType" text="\$type">
+               <padding>
+                  <Insets bottom="2.0" left="4.0" right="4.0" top="2.0" />
+               </padding>
+            </Label>
+            <VBox>
+               <children>
+                  <Label style="-fx-font-size: 10; -fx-text-fill: grey;" text="Timestamp:" />
+               <Label fx:id="timestamp" styleClass="cell_big_label" text="\$timestamp" />
+               </children>
+            </VBox>
+      </HBox>
+      <Label fx:id="value" styleClass="cell_big_label" text="\$value" />
+         <FlowPane fx:id="remarkPages" />
+    </VBox>
+      <rowConstraints>
+         <RowConstraints />
+      </rowConstraints>
+  </GridPane>
+</HBox>
