--- a/docs/stylesheets/gh-pages.css
+++ b/docs/stylesheets/gh-pages.css
@@ -65,6 +65,9 @@ table.tableblock > .title,
     color: rgb(197, 90, 17);
 }
 
+.imageblock{text-align:center}
+.imageblock>.title{margin-bottom:0;text-align:center}
+
 @media screen {
     #footer {
         background-color: #f6f6f6;
@@ -202,7 +205,7 @@ table.tableblock > .title,
     padding: 1rem 1rem;
 }
 
-/* Do not display site header on print mediums */
+/* Do not display site header and link URLs on print mediums */
 @media print {
     #seedu-header {
         display: none;
@@ -210,5 +213,9 @@ table.tableblock > .title,
 
     #site-header {
         display: none;
+    }
+
+    a[href]:after {
+        content: none !important;
     }
 }
