implemented new cli

--- a/src/main/resources/view/Windows/MainWindow.fxml
+++ b/src/main/resources/view/Windows/MainWindow.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.TextArea?>
 <VBox prefHeight="700.0" prefWidth="900.0" stylesheets="@../defaultStyles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dream.fcard.gui.controllers.windows.MainWindow">
     <children>
         <MenuBar VBox.vgrow="NEVER">
@@ -71,10 +72,7 @@
                 </ScrollPane>
             </children>
         </HBox>
-        <TextField fx:id="commandLine" onAction="#handleUserInput" promptText="Enter a command..." styleClass="code">
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding></TextField>
+        <TextArea fx:id="cli"></TextArea>
         <HBox id="HBox" alignment="CENTER_LEFT" VBox.vgrow="NEVER">
             <children>
                   <Label fx:id="messageLabel" textFill="#ed0a0a" HBox.hgrow="ALWAYS" />
