Revert "fixed merge commits"
This reverts commit affe57211a9a347e03a4e3df3fc4c3eb07362701, reversing
changes made to 292448d0a827eb78af9820c2225bb7e5e73e287d.

--- a/src/main/resources/view/Windows/CardCreatingWindow.fxml
+++ b/src/main/resources/view/Windows/CardCreatingWindow.fxml
@@ -23,7 +23,7 @@
         <Label text="Enter your question" />
       <TextArea fx:id="questionField" prefHeight="50.0" />
         <Label fx:id="addAnswerLabel" text="Enter your answers" />
-        <VBox fx:id="answerContainer" maxHeight="50.0" />
+        <VBox fx:id="answerContainer" />
         <Button fx:id="onAddQuestion" mnemonicParsing="false" text="Add card" />
     </children>
 </fx:root>
